5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1764_1583.log
== SUBMITION (2019-06-09 17:30:36) 
-- CODE:
from numpy import*
num = int(input("Numeros: ")
i = 0
d = 3
o = "."
s = ""
while(i<len(num)):
	if(i<(len(num)-4)):
		s = s + n[i:d] + o
	else:
		s = s + n[i:d]
	i = i + 3
	d = d + 3			 
print(s)
-- EXECUTION TIME:
0.838874
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:32:27) 
-- CODE:
from numpy import*
num = int(input("Numeros: ")
i = 0
d = 3
o = "."
s = ""
while(i<len(num)):
	if(i<(len(num)-4)):
		s = s + num[i:d] + o
	else:
		s = s + num[i:d]
	i = i + 3
	d = d + 3			 
print(s)
-- EXECUTION TIME:
0.59851
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:33:03) 
-- CODE:
from numpy import*
num = int(input("Numeros: ")
i = 0
d = 3
o = "."
s = ""
while(i<len(num)):
	if(i<(len(num)-4)):
		s = s + num[i:d] + o
	else:
		s = s + num[i:d]
	i = i + 3
	d = d + 3			 
print(s)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:33:29) 
-- CODE:
from numpy import*
num = int(input("Numeros: "))
i = 0
d = 3
o = "."
s = ""
while(i<len(num)):
	if(i<(len(num)-4)):
		s = s + num[i:d] + o
	else:
		s = s + num[i:d]
	i = i + 3
	d = d + 3			 
print(s)
-- EXECUTION TIME:
1.24528
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 7, in <module>
    while(i<len(num)):
TypeError: object of type 'int' has no len()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:33:34) 
-- CODE:
from numpy import*
num = int(input("Numeros: "))
i = 0
d = 3
o = "."
s = ""
while(i<len(num)):
	if(i<(len(num)-4)):
		s = s + num[i:d] + o
	else:
		s = s + num[i:d]
	i = i + 3
	d = d + 3			 
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:34:41) 
-- CODE:
from numpy import*
num = input("Numeros: ")
i = 0
d = 3
o = "."
s = ""
while(i<len(num)):
	if(i<(len(num)-4)):
		s = s + num[i:d] + o
	else:
		s = s + num[i:d]
	i = i + 3
	d = d + 3			 
print(s)
-- EXECUTION TIME:
1.11111
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
